@@ -26,7 +26,7 @@ use R::Dcf;
 use R::Utils;
 
 
-my $revision = ' $Revision: 1.43 $ ';
+my $revision = ' $Revision: 1.44 $ ';
 my $version;
 my $name;
 $revision =~ / ([\d\.]*) /;
@@ -253,7 +253,7 @@ foreach $pkg (@ARGV){
 	rmtree("R.INSTALL");
     }
     print("\n");
-    if(!$res) {print("\* DONE\n");}
+    if(!$res) {print("\* DONE\n");} else {exit $res;}
 }
 
 
