@@ -50,8 +50,11 @@ if ${R_SAVE_IMAGE}; then
     (echo "options(save.image.defaults=${save_image_defaults})"; \
       if test -s R_PROFILE.R; then cat R_PROFILE.R; fi; \
       echo "invisible(.libPaths(c(\"${lib1}\", .libPaths())))"; \
-      ${code_cmd}) | ${R_EXE} ${R_SAVE_EXE} \
-        || (echo "Execution of package source for ${pkg} failed"; exit 1)
+      ${code_cmd}) | ${R_EXE} ${R_SAVE_EXE}
+    if test ${?} -ne 0; then
+      echo "execution of package source for '${pkg}' failed"
+      exit 1
+    fi
     if test ! -f NAMESPACE; then
         mv .RData ${rda_file}
     fi
